Make grafana_portal come from the repo

--- a/jpackages/grafana_portal/1.0/coderecipe.cfg
+++ b/jpackages/grafana_portal/1.0/coderecipe.cfg
@@ -7,4 +7,6 @@
 #apps/osis/arakoonStart.py              |   | | base | 
 #apps/osis/tests/                       |   | | base |
 #apps/osis/apps/osis/config             |   | | base | config
-
+apps/gridportal/grafana/config.js | apps/portals/jslib/grafana/config.js | | base |
+apps/gridportal/grafana/iframe.html | apps/portals/jslib/grafana/iframe.html | | base |
+apps/gridportal/grafana/app/dashboards/ | apps/portals/jslib/grafana/app/dashboards/ | | base |
