repackage jumpscale prototypes and examples

--- a/jpackages/examples_jumpscale/1.0/coderecipe.cfg
+++ b/jpackages/examples_jumpscale/1.0/coderecipe.cfg
@@ -5,4 +5,4 @@
 #platform empty means generic
 
 examples | apps/examples | | base |
-prototypes | apps/prototypes | | base |
+#prototypes | apps/prototypes | | base |
