Add iframe2 to grafana_portal

--- a/jpackages/grafana_portal/1.0/coderecipe.cfg
+++ b/jpackages/grafana_portal/1.0/coderecipe.cfg
@@ -9,4 +9,5 @@
 #apps/osis/apps/osis/config             |   | | base | config
 apps/gridportal/grafana/config.js | apps/portals/jslib/grafana/config.js | | base |
 apps/gridportal/grafana/iframe.html | apps/portals/jslib/grafana/iframe.html | | base |
+apps/gridportal/grafana/iframe2.html | apps/portals/jslib/grafana/iframe2.html | | base |
 apps/gridportal/grafana/app/dashboards/ | apps/portals/jslib/grafana/app/dashboards/ | | base |
