Eve package wit configurable parameters

--- a/jpackages/eve/1.0/coderecipe.cfg
+++ b/jpackages/eve/1.0/coderecipe.cfg
@@ -5,6 +5,6 @@
 #platform empty means generic
 
 apps/eve/generators | apps/eve/generators |generic | base |
-apps/eve/start.py                | apps/eve/start.py  | generic | base |
+apps/eve/eve_start.py                | apps/eve/eve_start.py  | generic | base |
 apps/eve/generators              | apps/eve/generators  |generic | base |
 apps/eve/test                    | apps/eve/test  |generic | base |
